--- a/module-3/01_Intro_HTML_CSS/student-exercise/info-form/index.html
+++ b/module-3/01_Intro_HTML_CSS/student-exercise/info-form/index.html
@@ -13,7 +13,7 @@
         <form method="POST" action="https://60466d2df0c6dc00177b1e35.mockapi.io/informationForm">
             <div>
             <label for="nameField">Name: </label>
-            <input type="text" id="nameField" name="nameField"/>
+            <input type="text" id="name" name="nameField"/>
             </div>
 
             <div>
@@ -28,17 +28,17 @@
 
             <div>
             <label for="favcolor">Favorite Color:</label>
-            <input type="color" id="favcolor" name="favcolor" value="#ff0000"/>  
+            <input type="color" id="faveColor" name="favcolor" value="#ff0000"/>  
             </div>
 
             <div>
             <label for="numberField">Favorite Number: </label>
-            <input type="number" id="numberField" name="numberField"/>
+            <input type="number" id="faveNumber" name="numberField"/>
             </div>
 
             <div> 
             <label for="dataCorrect">Confirm Data Correct: </label>
-            <input type="checkbox" id="dataCorrect" name="dataCorrect"/>
+            <input type="checkbox" id="confirm" name="dataCorrect"/>
             </div>
 
             <input type="submit"/>
